--- a/README.textile
+++ b/README.textile
@@ -68,3 +68,6 @@ h2. Changelog
 Changed how the audio dispatcher stops. Added StopAudioProcessor.
 Added FastYin implementation by Matthias Mauch
 Added AMDF pitch estimator by Eder Souza
+
+<dt>Version 1.2</dt><dd>2012-06-5</dd> 
+Modified the interface of PitchDetector to return a more elaborate result structure with pitch, probability and a boolean "is pitched".
